-- MySQL dump 10.13  Distrib 8.0.29, for Win64 (x86_64)
--
-- Host: 127.0.0.1    Database: pandemic
-- ------------------------------------------------------
-- Server version	8.0.29

/*!40101 SET @OLD_CHARACTER_SET_CLIENT=@@CHARACTER_SET_CLIENT */;
/*!40101 SET @OLD_CHARACTER_SET_RESULTS=@@CHARACTER_SET_RESULTS */;
/*!40101 SET @OLD_COLLATION_CONNECTION=@@COLLATION_CONNECTION */;
/*!50503 SET NAMES utf8 */;
/*!40103 SET @OLD_TIME_ZONE=@@TIME_ZONE */;
/*!40103 SET TIME_ZONE='+00:00' */;
/*!40014 SET @OLD_UNIQUE_CHECKS=@@UNIQUE_CHECKS, UNIQUE_CHECKS=0 */;
/*!40014 SET @OLD_FOREIGN_KEY_CHECKS=@@FOREIGN_KEY_CHECKS, FOREIGN_KEY_CHECKS=0 */;
/*!40101 SET @OLD_SQL_MODE=@@SQL_MODE, SQL_MODE='NO_AUTO_VALUE_ON_ZERO' */;
/*!40111 SET @OLD_SQL_NOTES=@@SQL_NOTES, SQL_NOTES=0 */;

--
-- Table structure for table `cardcity`
--

DROP TABLE IF EXISTS `cardcity`;
/*!40101 SET @saved_cs_client     = @@character_set_client */;
/*!50503 SET character_set_client = utf8mb4 */;
CREATE TABLE `cardcity` (
  `cardid` int NOT NULL,
  `cardname` varchar(45) NOT NULL,
  PRIMARY KEY (`cardid`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_ai_ci;
/*!40101 SET character_set_client = @saved_cs_client */;

--
-- Dumping data for table `cardcity`
--

LOCK TABLES `cardcity` WRITE;
/*!40000 ALTER TABLE `cardcity` DISABLE KEYS */;
INSERT INTO `cardcity` VALUES (1,'SAN FRANCISCO'),(2,'CHICAGO'),(3,'MONTRÉAL'),(4,'NEW YORK'),(5,'WASHINGTON'),(6,'ATLANTA'),(7,'LONDON'),(8,'MADRID'),(9,'PARIS'),(10,'ESSEN'),(11,'ST. PETERSBURG'),(12,'MILAN'),(13,'LOS ANGELES'),(14,'MEXICO CITY'),(15,'MIAMI'),(16,'BOGOTÁ'),(17,'LIMA'),(18,'SANTIAGO'),(19,'BUENOS AIRES'),(20,'SÃO PAULO'),(21,'LAGOS'),(22,'KINSHASA'),(23,'KHARTOUM'),(24,'JOHANNESBURG'),(25,'MOSCOW'),(26,'TEHRAN'),(27,'DELHI'),(28,'KOLKATA'),(29,'CHENNAI'),(30,'MUMBAI'),(31,'KARACHI'),(32,'BAGHDAD'),(33,'RIYADH'),(34,'CAIRO'),(35,'ISTANBUL'),(36,'ALGIERS'),(37,'BEIJING'),(38,'SEOUL'),(39,'TOKYO'),(40,'SHANGHAI'),(41,'HONG KONG'),(42,'TRIPEI'),(43,'OSAKA'),(44,'BANGKOK'),(45,'HO CHI MINH CITY'),(46,'MANILA'),(47,'JAKARTA'),(48,'SYDNEY'),(49,'PANDEMIC'),(50,'PANDEMIC'),(51,'PANDEMIC'),(52,'PANDEMIC'),(53,'PANDEMIC');
/*!40000 ALTER TABLE `cardcity` ENABLE KEYS */;
UNLOCK TABLES;
/*!40103 SET TIME_ZONE=@OLD_TIME_ZONE */;

/*!40101 SET SQL_MODE=@OLD_SQL_MODE */;
/*!40014 SET FOREIGN_KEY_CHECKS=@OLD_FOREIGN_KEY_CHECKS */;
/*!40014 SET UNIQUE_CHECKS=@OLD_UNIQUE_CHECKS */;
/*!40101 SET CHARACTER_SET_CLIENT=@OLD_CHARACTER_SET_CLIENT */;
/*!40101 SET CHARACTER_SET_RESULTS=@OLD_CHARACTER_SET_RESULTS */;
/*!40101 SET COLLATION_CONNECTION=@OLD_COLLATION_CONNECTION */;
/*!40111 SET SQL_NOTES=@OLD_SQL_NOTES */;

-- Dump completed on 2022-05-20 23:31:36
