public class Field {

    int xPosSanfrancisco = 175, yPosSanfrancisco = 220;
    int xPosChicago = 285, yPosChicago = 185;
    int xPosMontreal = 380, yPosMontreal = 180;
    int xPosNewyork = 450, yPosNewyork = 185;
    int xPosWashington = 410, yPosWashington = 250;
    int xPosAtlanta = 320, yPosAtlanta = 240;
    int xPosLondon = 515, yPosLondon = 140;
    int xPosMadrid = 510, yPosMadrid = 200;
    int xPosParis = 570, yPosParis = 170;
    int xPosEssen = 590, yPosEssen = 95;
    int xPosStpetersburg = 720, yPosStpetersburg = 80;
    int xPosMilan = 640, yPosMilan = 150;
    int xPosLosangeles = 220, yPosLosangeles = 280;
    int xPosMexicocity = 280, yPosMexicocity = 320;
    int xPosMiami = 375, yPosMiami = 310;
    int xPosBogota = 375, yPosBogota = 380;
    int xPosLima = 320, yPosLima = 430;
    int xPosSantiago = 340, yPosSantiago = 500;
    int xPosBuenosaires = 450, yPosBuenosaires = 500;
    int xPosSaopaulo = 510, yPosSaopaulo = 450;
    int xPosLagos = 550, yPosLagos = 360;
    int xPosKinshasa = 625, yPosKinshasa = 420;
    int xPosKhartoum = 680, yPosKhartoum = 350;
    int xPosJohannesburg = 690, yPosJohannesburg = 530;
    int xPosMoscow = 760, yPosMoscow = 130;
    int xPosTehran = 835, yPosTehran = 175;
    int xPosDelhi = 900, yPosDelhi = 220;
    int xPosKolkata = 950, yPosKolkata = 270;
    int xPosChennai = 900, yPosChennai = 365;
    int xPosMumbai = 840, yPosMumbai = 330;
    int xPosKarachi = 835, yPosKarachi = 260;
    int xPosBaghdad = 750, yPosBaghdad = 230;
    int xPosRiyadh = 770, yPosRiyadh = 310;
    int xPosCairo = 670, yPosCairo = 270;
    int xPosIstanbul = 690, yPosIstanbul = 190;
    int xPosAlgiers = 585, yPosAlgiers = 240;
    int xPosBeijing = 1010, yPosBeijing = 170;
    int xPosSeoul = 1080, yPosSeoul = 160;
    int xPosTokyo = 1160, yPosTokyo = 200;
    int xPosShanghai = 1040, yPosShanghai = 230;
    int xPosHongkong = 1030, yPosHongkong = 290;
    int xPosTripei = 1100, yPosTripei = 310;
    int xPosOsaka = 1160, yPosOsaka = 270;
    int xPosBangkok = 960, yPosBangkok = 330;
    int xPosHochiminhcity = 1020, yPosHochiminhcity = 380;
    int xPosManila = 1120, yPosManila = 390;
    int xPosJakarta = 960, yPosJakarta = 430;
    int xPosSydney = 1170, yPosSydney = 510;

    public int getxPosSanfrancisco(){
        return xPosSanfrancisco;
    }
    public int getyPosSanfrancisco(){
        return yPosSanfrancisco;
    }
    public int getxPosChicago(){
        return xPosChicago;
    }
    public int getyPosChicago(){
        return yPosChicago;
    }
    public int getxPosMontreal(){
        return xPosMontreal;
    }
    public int getyPosMontreal(){
        return yPosMontreal;
    }
    public int getxPosNewyork(){
        return xPosNewyork;
    }
    public int getyPosNewyork(){
        return yPosNewyork;
    }
    public int getxPosWashington(){
        return xPosWashington;
    }
    public int getyPosWashington(){
        return yPosWashington;
    }
    public int getxPosAtlanta(){
        return xPosAtlanta;
    }
    public int getyPosAtlanta(){
        return yPosAtlanta;
    }
    public int getxPosLondon(){
        return xPosLondon;
    }
    public int getyPosLondon(){
        return yPosLondon;
    }
    public int getxPosMadrid(){
        return xPosMadrid;
    }
    public int getyPosMadrid(){
        return yPosMadrid;
    }
    public int getxPosParis(){
        return xPosParis;
    }
    public int getyPosParis(){
        return yPosParis;
    }
    public int getxPosEssen(){
        return xPosEssen;
    }
    public int getyPosEssen(){
        return yPosEssen;
    }
    public int getxPosMilan(){
        return xPosMilan;
    }
    public int getyPosMilan(){
        return yPosMilan;
    }
    public int getxPosLosangeles(){
        return xPosLosangeles;
    }
    public int getyPosLosangeles(){
        return yPosLosangeles;
    }
    public int getxPosMexicocity(){
        return xPosMexicocity;
    }
    public int getyPosMexicocity(){
        return yPosMexicocity;
    }
    public int getxPosMiami(){
        return xPosMiami;
    }
    public int getyPosMiami(){
        return yPosMiami;
    }
    public int getxPosBogota(){
        return xPosBogota;
    }
    public int getyPosBogota(){
        return yPosBogota;
    }
    public int getxPosLima(){
        return xPosLima;
    }
    public int getyPosLima(){
        return yPosLima;
    }
    public int getxPosSantiago(){
        return xPosSantiago;
    }
    public int getyPosSantiago(){
        return yPosSantiago;
    }
    public int getxPosBuenosaires(){
        return xPosBuenosaires;
    }
    public int getyPosBuenosaires(){
        return yPosBuenosaires;
    }
    public int getxPosSaopaulo(){
        return xPosSaopaulo;
    }
    public int getyPosSaopaulo(){
        return yPosSaopaulo;
    }
    public int getxPosLagos(){
        return xPosLagos;
    }
    public int getyPosLagos(){
        return yPosLagos;
    }
    public int getxPosKinshasa(){
        return xPosKinshasa;
    }
    public int getyPosKinshasa(){
        return yPosKinshasa;
    }
    public int getxPosKhartoum(){
        return xPosKhartoum;
    }
    public int getyPosKhartoum(){
        return yPosKhartoum;
    }
    public int getxPosJohannesburg(){
        return xPosJohannesburg;
    }
    public int getyPosJohannesburg(){
        return yPosJohannesburg;
    }
    public int getxPosMoscow(){
        return xPosMoscow;
    }
    public int getyPosMoscow(){
        return yPosMoscow;
    }
    public int getxPosTehran(){
        return xPosTehran;
    }
    public int getyPosTehran(){
        return yPosTehran;
    }
    public int getxPosDelhi(){
        return xPosDelhi;
    }
    public int getyPosDelhi(){
        return yPosDelhi;
    }
    public int getxPosKolkata(){
        return xPosKolkata;
    }
    public int getyPosKolkata(){
        return yPosKolkata;
    }
    public int getxPosChennai(){
        return xPosChennai;
    }
    public int getyPosChennai(){
        return yPosChennai;
    }
    public int getxPosMumbai(){
        return xPosMumbai;
    }
    public int getyPosMumbai(){
        return yPosMumbai;
    }
    public int getxPosKarachi(){
        return xPosKarachi;
    }
    public int getyPosKarachi(){
        return yPosKarachi;
    }
    public int getxPosBaghdad(){
        return xPosBaghdad;
    }
    public int getyPosBaghdad(){
        return yPosBaghdad;
    }
    public int getxPosRiyadh(){
        return xPosRiyadh;
    }
    public int getyPosRiyadh(){
        return yPosRiyadh;
    }
    public int getxPosCairo(){
        return xPosCairo;
    }
    public int getyPosCairo(){
        return yPosCairo;
    }
    public int getxPosIstanbul(){
        return xPosIstanbul;
    }
    public int getyPosIstanbul(){
        return yPosIstanbul;
    }
    public int getxPosAlgiers(){
        return xPosAlgiers;
    }
    public int getyPosAlgiers(){
        return yPosAlgiers;
    }
    public int getxPosBeijing(){
        return xPosBeijing;
    }
    public int getyPosBeijing(){
        return yPosBeijing;
    }
    public int getxPosSeoul(){
        return xPosSeoul;
    }
    public int getyPosSeoul(){
        return yPosSeoul;
    }
    public int getxPosTokyo(){
        return xPosTokyo;
    }
    public int getyPosTokyo(){
        return yPosTokyo;
    }
    public int getxPosShanghai(){
        return xPosShanghai;
    }
    public int getyPosShanghai(){
        return yPosShanghai;
    }
    public int getxPosHongkong(){
        return xPosHongkong;
    }
    public int getyPosHongkong(){
        return yPosHongkong;
    }
    public int getxPosTripei(){
        return xPosTripei;
    }
    public int getyPosTripei(){
        return yPosTripei;
    }
    public int getxPosOsaka(){
        return xPosOsaka;
    }
    public int getyPosOsaka(){
        return yPosOsaka;
    }
    public int getxPosBangkok(){
        return xPosBangkok;
    }
    public int getyPosBangkok(){
        return yPosBangkok;
    }
    public int getxPosHochiminhcity(){
        return xPosHochiminhcity;
    }
    public int getyPosHochiminhcity(){
        return yPosHochiminhcity;
    }
    public int getxPosManila(){
        return xPosManila;
    }
    public int getyPosManila(){
        return yPosManila;
    }
    public int getxPosJakarta(){
        return xPosJakarta;
    }
    public int getyPosJakarta(){
        return yPosJakarta;
    }
    public int getxPosSydney(){
        return xPosSydney;
    }
    public int getyPosSydney(){
        return yPosSydney;
    }
}

