class Main {

    public static void main(String[] args) {
        GameUI game = new GameUI();
        game.gameStart();
    }
}
