public class Researchcenter {

    private int xPosRC;
    private int yPosRC;
    private int widthRC;
    private int heightRC;

    public Researchcenter(int xPosRC, int yPosRC, int widthRC, int heightRC){
        this.xPosRC = xPosRC;
        this.yPosRC = yPosRC;
        this.widthRC = widthRC;
        this.heightRC = heightRC;
    }

    public int getxPosRC() {
        return xPosRC;
    }

    public void setxPosRC(int xPosRC) {
        this.xPosRC = xPosRC;
    }

    public int getyPosRC() {
        return yPosRC;
    }

    public void setyPosRC(int yPosRC) {
        this.yPosRC = yPosRC;
    }

    public int getWidthRC() {
        return widthRC;
    }

    public void setWidthRC(int widthRC) {
        this.widthRC = widthRC;
    }

    public int getHeightRC() {
        return heightRC;
    }

    public void setHeightRC(int heightRC) {
        this.heightRC = heightRC;
    }
}
